[gd_scene load_steps=4 format=3 uid="uid://dyr1juv2ogxdr"]

[ext_resource type="Script" path="res://addons/brambox/UserInterface/subtitle_handler.gd" id="1_bsy2u"]
[ext_resource type="Theme" uid="uid://bq6qbvmwxf5gm" path="res://addons/brambox/UserInterface/UITheme.tres" id="2_nlqsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86nqw"]
content_margin_left = 16.0
content_margin_right = 16.0
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_size = 1

[node name="SubtitleHandler" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16
script = ExtResource("1_bsy2u")

[node name="Subtitles" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_nlqsl")
theme_override_styles/panel = SubResource("StyleBoxFlat_86nqw")

[node name="DialogueLabel" type="Label" parent="Subtitles"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialoguePlayer" type="AudioStreamPlayer" parent="Subtitles"]
volume_db = 5.0

[connection signal="finished" from="Subtitles/DialoguePlayer" to="." method="_on_dialogue_player_finished"]
